Wrote mapToResponse method and implemented it in another services to reduce unnecessary code